--- a/Assignment_day3.ipynb
+++ b/Assignment_day3.ipynb
@@ -106,12 +106,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 299
-        },
-        "id": "P_6DGhWxCre0",
-        "outputId": "8e3897a0-7323-4d5e-d18b-b7ba197a4f97"
+        "id": "P_6DGhWxCre0"
       },
       "source": [
         "x = input('gift_presented_to: ')\n",
@@ -126,35 +121,18 @@
         "index = val.index(val[2])\n",
         "print('this is index of ',val[1],'=',index)\n",
         "\n",
-        "x1 = \n",
-        "for i in x:\n",
-        "  print(i)"
+        "x1 = len(val)\n",
+        "print(x1)\n",
+        "for i in range(x1):\n",
+        "  j=i+1\n",
+        "  if(j>=x1):\n",
+        "    print(val[i+1],val.index(val[i]))\n",
+        "  print(val[i],val.index(val[j]))\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "gift_presented_to: 2, 1, 5, 3, 4\n",
-            "2, 1, 5, 3, 4\n",
-            "this is the val ['2,', '1,', '5,', '3,', '4'] of type <class 'list'>\n",
-            "this is index of 2, = 1\n",
-            "this is index of  1, = 2\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-62-3c9086b44d5e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'this is index of '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'='\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
